5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1594_1805.log
== TEST (2019-04-02 01:05:05) 
-- CODE:
xA = float(input("Cordenada 1: "))
yA = float(input("Coodenada 2: "))

xB = float(input("Coodenada 1: "))
yB = float(input("Coodenada 2: "))

xM = (xB + xA)/2
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:05:44) 
-- CODE:
xA = float(input("Cordenada 1: "))
yA = float(input("Coodenada 2: "))

xB = float(input("Coodenada 1: "))
yB = float(input("Coodenada 2: "))

xM = (xB + xA)/2
print(xM, 1)
-- OUTPUT:
40.0 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:07:53) 
-- CODE:
xA = float(input("Cordenada 1: "))
yA = float(input("Coodenada 2: "))

xB = float(input("Coodenada 1: "))
yB = float(input("Coodenada 2: "))

xM = (xB + xA)/2
print(round(xM, 1))

yM = (yB+yA)/2
print(round(yM, 1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:09:25) 
-- CODE:
xA = float(input("Cordenada 1: ", round(xA, 1)))
yA = float(input("Coodenada 2: "))

xB = float(input("Coodenada 1: "))
yB = float(input("Coodenada 2: "))

xM = (xB + xA)/2
print(round(xM, 1))

yM = (yB+yA)/2
print(round(yM, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    xA = float(input("Cordenada 1: ", round(xA, 1)))
NameError: name 'xA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:09:50) 
-- CODE:
xA = float(input("Cordenada 1: "))
yA = float(input("Coodenada 2: "))

xB = float(input("Coodenada 1: "))
yB = float(input("Coodenada 2: "))

xM = (xB + xA)/2
print(round(xM, 1))

yM = (yB+yA)/2
print(round(yM, 1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:10:18) 
-- CODE:
xA = float(input("Cordenada 1: "))
yA = float(input("Coodenada 2: "))

xB = float(input("Coodenada 1: "))
yB = float(input("Coodenada 2: "))

xM = (xB + xA)/2
print(round(xM, 1))

yM = (yB+yA)/2
print(round(yM, 1))
-- EXECUTION TIME:
0.161803
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
